web/linkage/config/openshift/exampleconfig/postgresql/deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: postgresql2
  namespace: linking-project-dev-2-1-0
  selfLink: /oapi/v1/namespaces/linking-project-dev-2-1-0/deploymentconfigs/postgresql2
  uid: c645505d-4ba4-11e7-a97d-4af56a6b7ca1
  resourceVersion: '437741'
  generation: 11
  creationTimestamp: '2017-06-07T17:14:33Z'
  labels:
    app: postgresql2
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - postgresql2
        from:
          kind: ImageStreamTag
          namespace: openshift
          name: 'postgresql:latest'
        lastTriggeredImage: >-
          centos/postgresql-95-centos7@sha256:f35a471e28ef531c7dee9ddd769e543779bdeda8bfa394f93d462f1001acfc75
  replicas: 1
  test: false
  selector:
    app: postgresql2
    deploymentconfig: postgresql2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgresql2
        deploymentconfig: postgresql2
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      volumes:
        - name: postgresql2-1
          emptyDir: {}
      containers:
        - name: postgresql2
          image: >-
            centos/postgresql-95-centos7@sha256:f35a471e28ef531c7dee9ddd769e543779bdeda8bfa394f93d462f1001acfc75
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: postgresql2-1
              mountPath: /var/lib/pgsql/data
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
status:
  latestVersion: 6
  observedGeneration: 11
  replicas: 1
  updatedReplicas: 1
  availableReplicas: 1
  unavailableReplicas: 0
  details:
    message: config change
    causes:
      - type: ConfigChange
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2017-06-09T10:47:12Z'
      lastTransitionTime: '2017-06-09T10:47:10Z'
      reason: NewReplicationControllerAvailable
      message: replication controller "postgresql2-6" successfully rolled out
    - type: Available
      status: 'True'
      lastUpdateTime: '2017-06-16T10:13:19Z'
      lastTransitionTime: '2017-06-16T10:13:19Z'
      message: Deployment config has minimum availability.
  readyReplicas: 1
